fix bottom white stripe on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 body {
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    min-height: 120vh;
     font-family: var(--font);
     background: radial-gradient(ellipse at bottom, var(--bgColor) 0%, var(--bgColor2) 100%);
     /* background-image: url('https://bit.ly/3nFVqJh'); */
